tests/errors/extraneous_return_type.ceos
extern foo(int) -> void

foo(1) -> int
